# epubutil

./: .gitignore  .gitmodules  Doxyfile.in  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  binder.cpp  comic.cpp  configure  configure.ac  container.cpp  container.hpp  epub_options.hpp  file_metadata.hpp  index.html  manifest.hpp  manifest_item.hpp  media-type.hpp  media_type.hpp  metadata.cpp  metadata.hpp  minidom.cpp  minidom.hpp  navigation.hpp  options.hpp  pack.in  package.cpp  package.hpp  spine.hpp  xml.cpp  xml.hpp
.github/workflows/: c-cpp.yml
doc/html/: _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e___c_n_8md.html  annotated.html  binder_8cpp.html  binder_8cpp__incl.map  binder_8cpp__incl.md5  binder_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.map  binder_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  class_i_i_buffer-members.html  class_i_i_buffer.html  class_i_i_buffer__coll__graph.map  class_i_i_buffer__coll__graph.md5  class_i_i_file_path_reader-members.html  class_i_i_file_path_reader.html  class_i_i_file_path_reader__coll__graph.map  class_i_i_file_path_reader__coll__graph.md5  class_i_i_file_reader-members.html  class_i_i_file_reader.html  class_i_i_file_reader__coll__graph.map  class_i_i_file_reader__coll__graph.md5  class_i_i_file_stream_reader-members.html  class_i_i_file_stream_reader.html  class_i_i_file_stream_reader__coll__graph.map  class_i_i_file_stream_reader__coll__graph.md5  class_i_i_raw_data_reader-members.html  class_i_i_raw_data_reader.html  class_i_i_raw_data_reader__coll__graph.map  class_i_i_raw_data_reader__coll__graph.md5  class_i_i_read_interface-members.html  class_i_i_read_interface.html  class_i_i_read_interface__coll__graph.map  class_i_i_read_interface__coll__graph.md5  class_image_info-members.html  class_image_info.html  class_image_info__coll__graph.map  class_image_info__coll__graph.md5  classbook-members.html  classbook.html  classbook__coll__graph.map  classbook__coll__graph.md5  (+517 more)
m4/: ax_am_macros_static.m4  ax_code_coverage.m4
src/: book.hpp  chapter.hpp  comic.cpp  compat.hpp  constants.hpp  epub_options.hpp  file_metadata.hpp  geom.hpp  image_ref.cpp  image_ref.hpp  logging.cpp  logging.hpp  media_type.hpp  metadata.hpp  minidom.hpp  package.hpp  page.cpp  page.hpp  uri.hpp  xml.cpp
test/: .gitignore  01-container.cpp  02-package.cpp  03-manifest.cpp  03-media.cpp  04-image.cpp  04-spine.cpp  05-geom.cpp  06-uri.cpp  Makefile.am  Makefile.in  pach1.xhtml  pach2.xhtml  pach3.xhtml  tap.hpp
